Fix toList() pt Java 11 complete