@@ -1,6 +1,7 @@
 package drinkshop.service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import drinkshop.domain.IngredientReteta;
 import drinkshop.domain.Reteta;
@@ -61,7 +62,7 @@ public class StocService {
 
             List<Stoc> ingredienteStoc = stocRepo.findAll().stream()
                     .filter(s -> s.getIngredient().getNume().equalsIgnoreCase(ingredient))
-                    .toList();
+                    .collect(Collectors.toList());
 
             double ramas = necesar;
 
